fixed unalignment in css

--- a/css/style.css
+++ b/css/style.css
@@ -9,11 +9,11 @@
     padding: 0;
 }
 
+
+
 body {
-    height: 100vh;
     width: 100vw;
     background-color: white;
-
 }
 
 #time-date {
@@ -34,20 +34,15 @@ body {
     height: 10px;
 }
 
-#random-background-btn {
-    width: 100px;
-    height: 20px;
-    display: flex;
-    flex-direction: column;
-}
-
-main h1 {
+/* Dashboard titel */
+h1 {
     display: flex;
     justify-content: center;
     align-items: center;
     margin-top: 150px;
 }
 
+/* box wrappern */
 .wrapper {
     /* display: grid;
     grid-template-rows: minmax(200px, 1fr 1fr 1fr); */
@@ -62,10 +57,25 @@ main h1 {
 .wrapper div {
     width: 300px;
     height: 300px;
-    border-color: grey;
+    background-color: #e6e0e0;
     border-radius: var(--border-radius);
     margin: 10px;
     padding: 10px;
+}
+
+ul {
+    margin: 2px;
+    padding: 5px;
+}
+
+/* Snabblänkar */
+ul li {
+    display: flex;
+    justify-content: start;
+    align-items: center;
+    background-color: #f1f1f1;
+    margin-top: 10px;
+    border-radius: 10px;
 }
 
 footer {
@@ -75,23 +85,25 @@ footer {
     padding-bottom: 10px;
 }
 
+/* bakgrundsknapp */
 #random-background-btn {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    position: fixed;
+    bottom: 20px;
+    left: 50%;
+    transform: translateX(-50%);
     width: 150px;
     height: 50px;
-    margin-bottom: 10px;
+    background-color: #f1f1f1;
+    border: none;
+    border-radius: 10px;
+    cursor: pointer;
+    font-size: 16px;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
 }
 
 
+
 .block {
-    /* grid-template-rows: auto; */
-    /* justify-items: center; */
-    /* height: 250px; */
-    /* display: grid; */
-    /* height: fit-content; */
-    /* background: #f8f9fa; */
     background: rgb(223, 223, 223);
     padding: 20px;
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
@@ -104,9 +116,9 @@ footer {
     width: 100%;
     height: 90%;
     border-style: none;
-    margin-top: 5px;
+    padding: 5px;
     resize: none;
     font-size: 16px;
-    background: rgb(223, 223, 223);
+    background-color: aliceblue;
     outline: none;
 }
